moved annotated named queries 1